kubernetes/exposing-applications-in-k8s/exposing-apps-using-ingress/manifests/gym-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gym-svc
spec:
  selector:
    app: gym
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
